# django-react-tailwindcss

./: .gitignore  .prettierignore  .tool-versions  LICENSE  Pipfile  README.md  bootstrap.sh  manage.py  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
.storybook/: main.js
assets/components/buttons/: Button.js  DocButtons.js
assets/js/: index.js
django_react_tailwindcss/: asgi.py  settings.py  urls.py  wsgi.py
example/: settings.py  urls.py
static/css/: fonts.css
stories/: Introduction.stories.mdx
templates/: hello_world.html
