[tool.poetry]
name = "django-react-tailwindcss"
version = "0.2.0"
description = ""
authors = ["João Vítor Carli <jvitor.carli@tutamail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
